typescript/checker/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration3.ts.stderr
error: Unexpected token Some(Word(constructor))
 --> $DIR/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration3.ts:2:10
  |
2 |   export constructor() { }
  |          ^^^^^^^^^^^

